--- a/exp2.tex
+++ b/exp2.tex
@@ -1,5 +1,5 @@
 \subsection{H2: Applicability}\label{Se:practical}
-The second aspect of the evaluation compared between two versions of \Tool, whose sole difference lies in the method used for detecting relevant values: In one configuration (T-BD), relevant values are detected via tag propagation. The other configuration (H-BD) uses the heuristic detailed in \secref{points} of treating all values reachable from sink arguments \OC{(either directly or via the heap graph)} up to a depth bound of $k$ as relevant, which places more responsibility on Bayesian reasoning. We set $k$ at 3 based on manual review of the data structures flowing into privacy sinks. 
+The second aspect of the evaluation compared between two versions of \Tool, whose sole difference lies in the method used for detecting relevant values: In one configuration (T-BD), relevant values are detected via tag propagation. The other configuration (H-BD) uses the heuristic detailed in \secref{points} of treating all values reachable from sink arguments \OC{(either directly or via the heap graph)} up to a depth bound of $k$ as relevant, which places more responsibility on Bayesian reasoning. We set $k$ at 3 based on manual review of the data structures flowing into privacy sinks.
 
 \JCO{We designed a parametric benchmark application to quantify the overhead reduction imposed by the H-BD variant of \Tool. The application} {First, to quantify overhead reduction, we designed a parametric benchmark application, which }
 consists of a simple loop that flows the device IMEI into a log file.
@@ -12,13 +12,13 @@ Loop iterations perform intermediate data propagation steps. We then performed a
 
 The results, presented in \figref{overhead}, suggest that \JC{the overhead of} tag propagation is more dominant than \JC{that of} Bayesian analysis (with a ratio of roughly 2:1), even when the set of relevant values is naively over approximated. Discussion of the methodology underlying this experiment is provided in \appendixref{methodology}.
 
-In general, H-BD trades overhead reduction for accuracy. 
+In general, H-BD trades overhead reduction for accuracy.
 H2 then asserts that, \JC{\emph{in practice}}, the tradeoff posed by H-BD is effective. \JC{Below, we discuss our empirical evaluation of this hypothesis over real-life subjects.}
 
 \paragraph{Subjects} To avoid evaluators' bias, we applied the following selection process: We started from the 65 Google Play apps not chosen for the training phase. We then excluded 8 apps that do not have permission to access sensitive data and/or perform release operations (i.e., their manifest does not declare sufficient permissions out of {\tt INTERNET}, {\tt READ\_PHONE\_STATE}, {\tt SEND\_SMS}, etc), as well as 3 apps that we did not manage to install properly, resulting in 54 apps that installed successfully and exercise privacy sources and sinks.
 
 \JC{
-The complete list of the application we used is given in \tableref{realworldAll} of \appendixref{completeRes}. 
+The complete list of the application we used is given in \tableref{realworldAll} of \appendixref{completeRes}.
 A subset of the applications, for which at least one leakage was detected, is also listed in \tableref{realworld}.
 
 \paragraph{Methodology}
@@ -29,7 +29,7 @@ For comparability between the H-BD and T-BD configurations, we counted different
 We manually classified the findings into true positives and false positives. For this classification, we scrutinized the reports by the two configurations, and also --- in cases of uncertainty --- decompiled and/or reran the app to examine its behavior more closely. \JC{As in the experiment described in \secref{overhead}, we then calculated the precision, recall and F-measure for each of the tools.
 
 \paragraph{Results}
-The results obtained for H-BD and T-BD are summarized in \tableref{realworldAccuracy}. 
+The results obtained for H-BD and T-BD are summarized in \tableref{realworldAccuracy}.
 \tableref{realworld} summarizes the findings reported by both H-BD and T-BD at the granularity of privacy items: the device number, identifier and location, while \tableref{realworldAll} provides a detailed description of the results across all benchmarks including those on which no leakages were detected.
 The warnings reported by the H-BD configuration are also publicly available for review.\footnote{
 	See archive file \href{researcher.ibm.com/researcher/files/us-otripp/realworldapps.zip}{researcher.ibm.com/researcher/files/us-otripp/realworldapps.zip}.
@@ -57,13 +57,14 @@ The warnings reported by the H-BD configuration are also publicly available for 
       & TPs & FPs & FNs & Precision & Recall & F-measure & Crashes \\
 \hline
 \hline
- H-BD  & 27  & 1    & 0   &  0.99 & 1.00 & 0.99 (0.98) & 12 \\
+ H-BD  & 27  & 1    & 0   &  0.96 & 1.00 & 0.98 & 12 \\
 \hline
- T-BD & 13    &  0   &   9      & 1.00 & 0.84 & 0.84 (0.74) & 22 \\
+ T-BD & 14    &  0   &   10      & 1.00 & 0.58 & 0.73 & 22 \\
  \hline
 \end{tabular}
 %}% resizebox
  \end{center}
+ \vspace{-0.1in}
  \caption{\label{Ta:realworldAccuracy}Accuracy of H-BD and T-BD \Tool\ configurations}
 \end{small}
 \end{table}
@@ -72,7 +73,7 @@ The warnings reported by the H-BD configuration are also publicly available for 
 \begin{table*}
 \begin{small}
 \begin{center}
-%\resizebox{\textwidth}{!}{
+\resizebox{0.9\textwidth}{!}{
 \begin{tabular}{|l|c|c||c|c|c||c|c|c|}
 \hline
 \multicolumn{1}{|c|}{\multirow{2}{*}{App}} & \multicolumn{1}{c|}{\multirow{2}{*}{Domain}} & \multicolumn{1}{c||}{\multirow{2}{*}{Deep crawl?}} & \multicolumn{3}{c||}{H-BD} & \multicolumn{3}{c|}{T-BD} \\
@@ -99,8 +100,9 @@ com.goldtouch.mako                     &       news               & \checkmark &
 \multicolumn{1}{|c|}{15}               &                          &         8  &         1  &        13  &         4  &         0  &        4   &         4 \\
 \hline
 \end{tabular}
-%}% resizebox
+}% resizebox
 \end{center}
+\vspace{-0.1in}
 \caption{\label{Ta:realworld}Findings due to the H-BD and T-BD \Tool\ configurations on 15/54 top-popular mobile apps}
 \end{small}
 \end{table*}
@@ -109,13 +111,18 @@ com.goldtouch.mako                     &       news               & \checkmark &
 
 \JC{
 As \tableref{realworldAccuracy} indicates,
-%, and \tableref{realworldAll} affirms more explicitly, 
-the H-BD variant is more accurate than the T-BD variant overall (F-measure of 0.99 vs 0.84).
-As in the experiment described in \secref{overhead}, we performed a Welch's T-Test on the F-Measure results to further confirm this observation. The test establishes that the difference between the accuracy of the tools is significant (p-value=0.003 $<$ 0.05).
+%, and \tableref{realworldAll} affirms more explicitly,
+the H-BD variant is more accurate than the T-BD variant overall (F-measure of 0.98 vs. 0.73).
+As in the experiment described in \secref{overhead}, we further performed a two-tail McNemar test, considering 67 observations for each tool: 27 that correspond to true positives, 1 to false positive and 39 to cases where no leakages were found.
+
+We found that H-BD was accurate in 66 out of 67 cases, and T-DB was accurate in 54 out of 67 cases. 
+Building the 2$\times$2 contingency table and applying the two-tail McNemar test showed that the difference between the accuracy of the tools is significant (with the p-value of 0.001 to reject the null hypothesis that the accuracy observations for both tools come from the same Bernoulli distribution).
 Moreover, H-BD has a lower number of crashes and lower runtime overhead, which confirms H2.
+%Welch's T-Test on the F-Measure results to further confirm this observation. The test establishes that the difference between the accuracy of the tools is significant (p-value=0.003 $<$ 0.05).
+%Moreover, H-BD has a lower number of crashes and lower runtime overhead, which confirms H2.
 
 \paragraph{Discussion}
-To give the reader a taste of the findings, we present in \figrefs{ios7}{fruitninja} two examples of potential leakages that \Tool\ (both the H-BD and the T-BD configurations) deemed legitimate.} 
+To give the reader a taste of the findings, we present in \figrefs{ios7}{fruitninja} two examples of potential leakages that \Tool\ (both the H-BD and the T-BD configurations) deemed legitimate.}
 The instance in \figref{ios7} reflects the common scenario of obtaining the current (or last known) location, converting it into one or more addresses, and then releasing only the country or zip code. In the second instance, in \figref{fruitninja}, the 64-bit Android ID --- generated when the user first sets up the device --- is read via a call to \texttt{Settings$\$$Secure.getString(ANDROID\_ID)}. At the release point, into the file system, only a prefix of the Android ID consisting of the first 12 digits is published.
 
 \begin{figure}
@@ -123,7 +130,7 @@ The instance in \figref{ios7} reflects the common scenario of obtaining the curr
 $\fbox{source : private value}$
     GeoCoder.getFromLocation(...) : [ Lat: ..., Long: ...,
 	    Alt: ..., Bearing: ..., ..., $\textbf{IL}$ ]
-	    
+	
 $\fbox{sink : arguments}$
   WebView.loadUrl(...) : http://linux.appwiz.com/
     profile/72/72_exitad.html?
@@ -134,13 +141,14 @@ $\fbox{sink : arguments}$
     NETWORK=WIFI
 \end{lstlisting}
 \caption{\label{Fi:ios7}Suppressed warning on ios7lockscreen}
+\vspace{-0.1in}
 \end{figure}
 
 \begin{figure}
 \begin{lstlisting}[numbers=none]
 $\fbox{source : private value}$
   Settings$\$$Secure.getString(...) : $\textbf{cdf15124ea4c7ad5}$
-  
+
 $\fbox{sink : arguments}$
   FileOutputStream.write(...) :
     <?xml version='1.0' encoding='utf-8'
@@ -149,11 +157,12 @@ $\fbox{sink : arguments}$
     name="openudid">$\textbf{cdf15124ea4c}$
 \end{lstlisting}
 \caption{\label{Fi:fruitninja}Suppressed warning on fruitninjafree}
+\vspace{-0.1in}
 \end{figure}
 
 \JC{
 As \tableref{realworld} makes apparent, the findings by H-BD are more complete:
-It detects 27 leakages (versus 13 reports by T-BD), with no false-negative results and only one false positive.
+It detects 27 leakages (versus 13 reports by T-BD), with no false negative results and only one false positive.
 We attribute that to (i) the intrusive instrumentation required for tag propagation, which can cause instabilities, and (ii) inability to track tags through native code, as discussed below.
 }
 
@@ -167,4 +176,4 @@ A secondary reason why H-BD is able to detect more leakages, e.g. in the lockscr
 } which is a highly optimized and obfuscated library. We suspect that data-flow tracking breaks within this library, though we could not fully confirm this.
 
 At the same time, the loss in accuracy due to heuristic identification of relevant values is negligible, as suggested by the discussion in \secref{points}. H-BD triggers only one false alarm, on  ios7lockscreen,
-which is due to overlap between irrelevant values: extra information on the {\tt Location} object returned by a call to {\tt LocationManager.getLastKnownLocation(...)} and unrelated metadata passed into a {\tt ContextWrapper.startService(...)} request.  Finally, as expected, H-BD does not incur false negatives.
+which is due to overlap between irrelevant values: extra information on the {\tt Location} object returned by a call to {\tt LocationManager.getLastKnownLocation(...)} and unrelated metadata passed into a {\tt ContextWrapper.startService(...)} request.  Finally, as expected, H-BD does not incur false negatives. 
