--- a/introduction.tex
+++ b/introduction.tex
@@ -72,7 +72,7 @@ The second experiment examines the practical value of \Tool\ by applying it to 5
 	tracking by permitting statistical weighting of different features as the basis for privacy judgments.
 	\item Similarity-based reasoning (\secref{algorithm}): We instantiate the Bayesian approach by applying quantitative similarity judgments over private values and values
 	about to be released. This enables consideration of actual data, rather than only data flow, as evidence for privacy judgments.
-	\item Implementation and evaluation (\secrefs{bayesalg}{experiments}): We have instantiated our approach as the \Tool\ system, which is about to be featured in a leading security product. We report on two sets of experiments, whose results (i) demonstrate substantial accuracy gain thanks to Bayesian reasoning, and (ii) substantiate the overall effectiveness of \Tool\ when applied to real-world apps. All the leakage reports by \Tool\ are publicly available for scrutiny.\footnote{
+	\item Implementation and evaluation (\secrefs{bayesalg}{experiments}): We have instantiated our approach as the \Tool\ system, which is about to be featured in an IBM cloud-based security service. We report on two sets of experiments, whose results (i) demonstrate substantial accuracy gain thanks to Bayesian reasoning, and (ii) substantiate the overall effectiveness of \Tool\ when applied to real-world apps. All the leakage reports by \Tool\ are publicly available for scrutiny.\footnote{
 %		{\scriptsize \href{https://www.dropbox.com/sh/98dbvppf525hv58/AAASH9\_vFXtXJtIThk5q3Saoa}{https://www.dropbox.com/sh/98dbvppf525hv58/AAASH9\_vFXtXJtIThk5q3Saoa}}
 		 \href{researcher.ibm.com/researcher/files/us-otripp/Artifacts.zip}{researcher.ibm.com/researcher/files/us-otripp/Artifacts.zip}
 	}
