--- a/results.tex
+++ b/results.tex
@@ -11,7 +11,7 @@ For each value of $\ell$, we executed the app 51 times, picking a value from the
 
 \JC{
 \tableref{accuracyDBenchDetails} summarizes the results of the H1 experiment described in \secref{overhead}.
-For each of the benchmarks, it specifies the number of true positive, false positive and false negative findings 
+For each of the benchmarks, it specifies the number of true-positive, false-positive and false-negative findings 
 %, as well as the calculated precision, recall and F-measure
 for the compared tools, \Tool\ and TaintDroid.
 The benchmarks on which the tools differ are highlighted for convenience.
@@ -19,7 +19,7 @@ The benchmarks on which the tools differ are highlighted for convenience.
 
 Similarly, \tableref{realworldAll} summarizes the results of the H2 experiment described in \secref{practical}.
 The first two columns of \tableref{realworldAll} list the applications and their respective domain, and the third column denotes whether crawling was exhaustive.
-Then, the number of crashes, true positive, false positive and false negative findings
+Then, the number of crashes, true-positive, false-positive and false-negative findings
 %, as well as the calculated precision, recall and F-measure 
 are reported for both the H-BD and the T-BD variants of \Tool.
 %As in \tableref{accuracyDBenchDetails}, the F-measure is calculated by (a) averaging the corresponding values across all benchmarks (0.99 for H-BD vs 0.84 for T-BD), and (b) directly by considering the total number of TPs, FPs and FNs (0.98 vs 0.74).
